--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main>
     <div class="flex flex-column justify-center">
         <div class="b--solid b--mid-gray bw2 br3 pa2 mh5 mv3">
-            <p class="justify">Bonjour ! Je suis Antoine, j'ai 20 ans et je suis actuellement en première année à l'IUT
+            <p class="justify">Bonjour ! Je suis Antoine, j'ai 20 ans et je suis actuellement en seconde année à l'IUT
                 de Lannion (22).</p>
             <p>Je suis diplômé d'un baccalauréat STI2D (science et technologie de l’industrie et du développement
                 durable) option SIN (systèmes d'information et numérique).</p>
