--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="b--solid b--mid-gray bw2 br3 pa2 mh5 mv3">
             <p>
-                Pour plus d'information vous pouvez visité ce site ou lire mon <a href="assets/files/cv.pdf" target="_blank">Curriculum vitæ</a>
+                Pour plus d'information vous pouvez visité ce site ou lire mon <a href="assets/files/CV_Antoine_COLLIN.pdf" target="_blank">Curriculum vitæ</a>
             </p>
         </div>
     </div>
