--- a/competences.html
+++ b/competences.html
@@ -1,168 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Antoine Collin - Competences</title>
 
-    <link href="assets/fontawesome/css/all.css" rel="stylesheet" type="text/css">
+    <link
+      href="assets/fontawesome/css/all.css"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-    <link href="assets/css/color.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/size.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/color.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/size.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css" />
 
-    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css" />
 
     <script src="assets/js/miscellaneous.js"></script>
-</head>
-<body>
-<header>
-    <div class="white bg-mid-gray overflow-hidden w-100 fixed top-0" id="navBar">
-        <a class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3" href="index.html">Home</a>
+  </head>
+  <body>
+    <header>
+      <div
+        class="white bg-mid-gray overflow-hidden w-100 fixed top-0"
+        id="navBar"
+      >
+        <a
+          class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+          href="index.html"
+          >Home</a
+        >
         <div class="fr">
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="projets.html">Mes Projets</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="competences.html">Mes
-                Competences</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="experciences.html">Experiences</a>
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="projets.html"
+            >Mes Projets</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="competences.html"
+            >Mes Competences</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="experciences.html"
+            >Experiences</a
+          >
         </div>
-        <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn" id="barIcon"
-           onclick="topnavMenu()">
-            <i class="fa fa-bars"></i>
+        <a
+          class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn"
+          id="barIcon"
+          onclick="topnavMenu()"
+        >
+          <i class="fa fa-bars"></i>
         </a>
-    </div>
-</header>
+      </div>
+    </header>
 
-<main>
-    <div class="flex flex-column">
-
-        <div class="flex flex-row flex-wrap pa2 mv3 mh4 justify-center b--solid bw2 b--mid-gray br3 f4">
-            <p>
-                Bases instables
-                <progress value="25" max="100"></progress>
-            </p>
-            <p>
-                Les Bases
-                <progress value="50" max="100"></progress>
-            </p>
-            <p>
-                Utilisé couramment
-                <progress value="75" max="100"></progress>
-            </p>
-
+    <main>
+      <div class="flex flex-column">
+        <div
+          class="flex flex-row flex-wrap pa2 mv3 mh4 justify-center b--solid bw2 b--mid-gray br3 f4"
+        >
+          <p>
+            Quelques Connaissances
+            <progress value="25" max="100"></progress>
+          </p>
+          <p>
+            Les Bases
+            <progress value="50" max="100"></progress>
+          </p>
+          <p>
+            Utilisé Couramment
+            <progress value="75" max="100"></progress>
+          </p>
         </div>
 
         <div class="flex flex-row tc justify-center flex-wrap mid-gray">
+          <div
+            class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3"
+          >
+            <p class="mv2 f6 underline">Web</p>
 
-            <div class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3">
-                <p class="mv2 f6 underline">Web</p>
+            <table class="table">
+              <tr>
+                <td>HTML</td>
+                <td>
+                  <progress value="75" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>CSS</td>
+                <td>
+                  <progress value="75" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>JavaScript</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>PHP</td>
+                <td>
+                  <progress value="50" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>Asp.NET Core 2</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+            </table>
+          </div>
 
-                <table class="table">
-                    <tr>
-                        <td>HTML</td>
-                        <td>
-                            <progress value="75" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>
-                            <progress value="75" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>
-                            <progress value="25" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Asp.NET Core 2</td>
-                        <td>
-                            <progress value="50" max="100"></progress>
-                        </td>
-                    </tr>
-                </table>
+          <div
+            class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3"
+          >
+            <p class="mv2 f6 underline">Base de données</p>
 
+            <table class="table">
+              <tr>
+                <td>MySql</td>
+                <td>
+                  <progress value="50" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>PostGreSql</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+            </table>
+          </div>
+
+          <div
+            class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3"
+          >
+            <p class="mv2 f6 underline">Logiciel</p>
+
+            <table class="table">
+              <tr>
+                <td>Java</td>
+                <td>
+                  <progress value="50" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>C</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>C#</td>
+                <td>
+                  <progress value="75" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>Bash</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>Lua</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+              <tr>
+                <td>Python</td>
+                <td>
+                  <progress value="25" max="100"></progress>
+                </td>
+              </tr>
+            </table>
+          </div>
+
+          <div
+            class="flex flex-column pa2 mh4 mv5 b--solid bw2 b--mid-gray br3"
+          >
+            <p class="mv2 f6 underline">IDE Utilisé</p>
+
+            <div>
+              <a href="https://www.jetbrains.com/"
+                ><img
+                  alt="Jetbrains logo"
+                  class="w-25"
+                  src="assets/img/logo-JetBrains.png"
+              /></a>
+              <a href="https://code.visualstudio.com/">
+                <img src="assets/img/logo-vscode.png" alt="logo vscode" />
+              </a>
             </div>
-
-            <div class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3">
-                <p class="mv2 f6 underline">Base de données</p>
-
-                <table class="table">
-                    <tr>
-                        <td>MySql</td>
-                        <td>
-                            <progress value="50" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>PostGreSql</td>
-                        <td>
-                            <progress value="25" max="100"></progress>
-                        </td>
-                    </tr>
-                </table>
-
-            </div>
-
-            <div class="flex flex-column pa2 mh4 mv3 b--solid bw2 b--mid-gray br3">
-                <p class="mv2 f6 underline">Logiciel</p>
-
-                <table class="table">
-                    <tr>
-                        <td>Java</td>
-                        <td>
-                            <progress value="50" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>C</td>
-                        <td>
-                            <progress value="25" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>C#</td>
-                        <td>
-                            <progress value="75" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Bash</td>
-                        <td>
-                            <progress value="25" max="100"></progress>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Lua</td>
-                        <td>
-                            <progress value="25" max="100"></progress>
-                        </td>
-                    </tr>
-                </table>
-
-            </div>
-
-            <div class="flex flex-column pa2 mh4 mv5 b--solid bw2 b--mid-gray br3">
-                <p class="mv2 f6 underline">IDE Utilisé</p>
-
-                <p>J'utilise les outils proposés par JetBrains</p>
-                <a href="https://www.jetbrains.com/"><img alt="Jetbrains logo" class="w-25" src="assets/img/logo-JetBrains.png"></a>
-
-            </div>
+          </div>
         </div>
-    </div>
-</main>
+      </div>
+    </main>
 
-<footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
-    <div class="f1">
-        <p class="fl">Contact : <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr">antoine.collin.1@etudiant.univ-rennes1.fr</a></p>
+    <footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
+      <div class="f1">
+        <p class="fl">
+          Contact :
+          <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr"
+            >antoine.collin.1@etudiant.univ-rennes1.fr</a
+          >
+        </p>
         <p class="fr">&copy; COLLIN Antoine - 2019</p>
-    </div>
-</footer>
-
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
