--- a/experciences.html
+++ b/experciences.html
@@ -1,63 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Antoine Collin - Experiences</title>
 
-    <link href="assets/fontawesome/css/all.css" rel="stylesheet" type="text/css">
+    <link
+      href="assets/fontawesome/css/all.css"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-    <link href="assets/css/color.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/size.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/color.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/size.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css" />
 
-    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css" />
 
     <script src="assets/js/miscellaneous.js"></script>
-</head>
-<body>
-<header>
-    <div class="white bg-mid-gray overflow-hidden w-100 fixed top-0" id="navBar">
-        <a class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3" href="index.html">Home</a>
+  </head>
+  <body>
+    <header>
+      <div
+        class="white bg-mid-gray overflow-hidden w-100 fixed top-0"
+        id="navBar"
+      >
+        <a
+          class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+          href="index.html"
+          >Home</a
+        >
         <div class="fr">
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="projets.html">Mes Projets</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="competences.html">Mes
-                Competences</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="experciences.html">Experiences</a>
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="projets.html"
+            >Mes Projets</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="competences.html"
+            >Mes Competences</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="experciences.html"
+            >Experiences</a
+          >
         </div>
-        <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn" id="barIcon"
-           onclick="topnavMenu()">
-            <i class="fa fa-bars"></i>
+        <a
+          class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn"
+          id="barIcon"
+          onclick="topnavMenu()"
+        >
+          <i class="fa fa-bars"></i>
         </a>
-    </div>
-</header>
+      </div>
+    </header>
 
-<main>
-    <div class="flex flex-column items-center mid-gray">
+    <main>
+      <div class="flex flex-column items-center mid-gray">
         <div class="pv3 ph2 ma3 b--solid bw2 b--mid-gray br3">
-            <p><u>Emplois :</u> Preparateur de commandes</p>
-            <p><u>Lieu :</u> Entrepôt Lidl</p>
-            <p><u>Période :</u> été 2018</p>
-            <p><u>Durée :</u> 1 mois</p>
-            <p><u>Compétences aquises :</u> <a class="no-underline"
-                                               href="https://www.maformation.fr/actualites/a-quoi-sert-le-caces-23725">Cases
-                1</a></p>
-            <p><u>Description :</u></p>
-            <p>Préparation de palettes de fruits et légumes en entrepôt pour envois en magasin.</p>
+          <p><u>Emplois :</u> Preparateur de commandes</p>
+          <p><u>Lieu :</u> Entrepôt Lidl</p>
+          <p><u>Période :</u> été 2018</p>
+          <p><u>Durée :</u> 1 mois</p>
+          <p>
+            <u>Compétences aquises :</u>
+            <a
+              class="no-underline"
+              href="https://www.maformation.fr/actualites/a-quoi-sert-le-caces-23725"
+              >Cases 1</a
+            >
+          </p>
+          <p><u>Description :</u></p>
+          <p>
+            Préparation de palettes de fruits et légumes en entrepôt pour envois
+            en magasin.
+          </p>
         </div>
-    </div>
+      </div>
+    </main>
 
-</main>
-
-<footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
-    <div class="f1">
-        <p class="fl">Contact : <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr">antoine.collin.1@etudiant.univ-rennes1.fr</a></p>
+    <footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
+      <div class="f1">
+        <p class="fl">
+          Contact :
+          <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr"
+            >antoine.collin.1@etudiant.univ-rennes1.fr</a
+          >
+        </p>
         <p class="fr">&copy; COLLIN Antoine - 2019</p>
-    </div>
-</footer>
-
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
