--- a/index.html
+++ b/index.html
@@ -1,67 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Antoine Collin - Home</title>
 
-    <link href="assets/fontawesome/css/all.css" rel="stylesheet" type="text/css">
+    <link
+      href="assets/fontawesome/css/all.css"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-    <link href="assets/css/color.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/size.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/color.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/size.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/positioning.css" rel="stylesheet" type="text/css" />
 
-    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/stylesheet.css" rel="stylesheet" type="text/css" />
 
     <script src="assets/js/miscellaneous.js"></script>
-</head>
-<body>
-<header>
-    <div class="white bg-mid-gray overflow-hidden w-100 fixed top-0" id="navBar">
-        <a class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3" href="index.html">Home</a>
+  </head>
+  <body>
+    <header>
+      <div
+        class="white bg-mid-gray overflow-hidden w-100 fixed top-0"
+        id="navBar"
+      >
+        <a
+          class="no-underline color-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+          href="index.html"
+          >Home</a
+        >
         <div class="fr">
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="projets.html">Mes Projets</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="competences.html">Mes Competences</a>
-            <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
-               href="experciences.html">Experiences</a>
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="projets.html"
+            >Mes Projets</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="competences.html"
+            >Mes Competences</a
+          >
+          <a
+            class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3"
+            href="experciences.html"
+            >Experiences</a
+          >
         </div>
-        <a class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn" id="barIcon"
-           onclick="topnavMenu()">
-            <i class="fa fa-bars"></i>
+        <a
+          class="no-underline color-inherit bg-inherit hover-bg-white hover-mid-gray fl pv2 ph3 dn"
+          id="barIcon"
+          onclick="topnavMenu()"
+        >
+          <i class="fa fa-bars"></i>
         </a>
-    </div>
-</header>
+      </div>
+    </header>
 
-<main>
-    <div class="flex flex-column justify-center">
+    <main>
+      <div class="flex flex-column justify-center">
         <div class="b--solid b--mid-gray bw2 br3 pa2 mh5 mv3">
-            <p class="justify">Bonjour ! Je suis Antoine, j'ai 20 ans et je suis actuellement en seconde année à l'IUT
-                de Lannion (22).</p>
-            <p>Je suis diplômé d'un baccalauréat STI2D (science et technologie de l’industrie et du développement
-                durable) option SIN (systèmes d'information et numérique).</p>
-            <p> Je recherche un stage dans le milieux du développement logiciel ou jeux vidéos.</p>
+          <p class="justify">
+            Bonjour ! Je suis Antoine, j'ai 20 ans et je suis actuellement en
+            seconde année à l'IUT de Lannion (22).
+          </p>
+          <p>
+            Je suis diplômé d'un baccalauréat STI2D (science et technologie de
+            l’industrie et du développement durable) option SIN (systèmes
+            d'information et numérique).
+          </p>
+          <p>
+            Je recherche un stage dans le milieux du développement logiciel ou
+            jeux vidéos.
+          </p>
 
-            <p>Mes centres d’intérêts sont la programmation, les jeux vidéos et la lecture. Je développe des outils pour
-                certain jeux auxquels je joue.</p>
+          <p>
+            Mes centres d’intérêts sont la programmation, les jeux vidéos et la
+            lecture. Je développe des outils pour certain jeux auxquels je joue.
+          </p>
         </div>
 
         <div class="b--solid b--mid-gray bw2 br3 pa2 mh5 mv3">
-            <p>
-                Pour plus d'information vous pouvez visité ce site ou lire mon <a href="assets/files/CV_Antoine_COLLIN.pdf" target="_blank">Curriculum vitæ</a>
-            </p>
+          <p>
+            Pour plus d'information vous pouvez visité ce site ou lire mon
+            <a href="assets/files/CV_Antoine_COLLIN.pdf" target="_blank"
+              >Curriculum vitæ</a
+            >
+          </p>
         </div>
-    </div>
-</main>
+      </div>
+    </main>
 
-<footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
-    <div class="f1">
-        <p class="fl">Contact : <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr">antoine.collin.1@etudiant.univ-rennes1.fr</a>
+    <footer class="fixed bottom-0 w-100 overflow-hidden white bg-mid-gray">
+      <div class="f1">
+        <p class="fl">
+          Contact :
+          <a href="mailto:antoine.collin.1@etudiant.univ-rennes1.fr"
+            >antoine.collin.1@etudiant.univ-rennes1.fr</a
+          >
         </p>
         <p class="fr">&copy; COLLIN Antoine - 2019</p>
-    </div>
-</footer>
-
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
