--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             d'information et numérique).
           </p>
           <p>
-            Je recherche un stage dans le milieux du développement logiciel ou
+            Je recherche un stage dans le milieux du développement logiciel, web ou
             jeux vidéos.
           </p>
 
