--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             d'information et numérique).
           </p>
           <p>
-            Je recherche un stage dans le milieux du développement logiciel, web ou
-            jeux vidéos.
+            Je recherche un stage dans le milieux du développement logiciel, web
+            ou jeux vidéos.
           </p>
 
           <p>
@@ -99,7 +99,7 @@
             >antoine.collin.1@etudiant.univ-rennes1.fr</a
           >
         </p>
-        <p class="fr">&copy; COLLIN Antoine - 2019</p>
+        <p class="fr">&copy; COLLIN Antoine - 2018</p>
       </div>
     </footer>
   </body>
